# api/gen/oas_response_encoders_gen.go
@@ -277,6 +277,20 @@ func encodeDeletePollOptionResponse(response *DeletePollOptionNoContent, w http.
 	return nil
 }
 
+func encodeDiscoverCalendarsResponse(response *CalendarDiscoveryResult, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeGetBookingAvailabilityResponse(response *GetBookingAvailabilityOK, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
