# api/gen/oas_router_gen.go
@@ -446,6 +446,32 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 						break
 					}
 
+					if len(elem) == 0 {
+						break
+					}
+					switch elem[0] {
+					case 'd': // Prefix: "discover"
+						origElem := elem
+						if l := len("discover"); len(elem) >= l && elem[0:l] == "discover" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch r.Method {
+							case "POST":
+								s.handleDiscoverCalendarsRequest([0]string{}, elemIsEscaped, w, r)
+							default:
+								s.notAllowed(w, r, "POST")
+							}
+
+							return
+						}
+
+						elem = origElem
+					}
 					// Param: "id"
 					// Match until "/"
 					idx := strings.IndexByte(elem, '/')
@@ -1443,6 +1469,37 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						break
 					}
 
+					if len(elem) == 0 {
+						break
+					}
+					switch elem[0] {
+					case 'd': // Prefix: "discover"
+						origElem := elem
+						if l := len("discover"); len(elem) >= l && elem[0:l] == "discover" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch method {
+							case "POST":
+								r.name = DiscoverCalendarsOperation
+								r.summary = "Discover available calendars from a CalDAV server"
+								r.operationID = "discoverCalendars"
+								r.operationGroup = ""
+								r.pathPattern = "/calendars/discover"
+								r.args = args
+								r.count = 0
+								return r, true
+							default:
+								return
+							}
+						}
+
+						elem = origElem
+					}
 					// Param: "id"
 					// Match until "/"
 					idx := strings.IndexByte(elem, '/')
