# api/gen/oas_validators_gen.go
@@ -248,6 +248,29 @@ func (s BookingStatus) Validate() error {
 	}
 }
 
+func (s *CalendarDiscoveryResult) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.Calendars == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "calendars",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *CalendarTestResult) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
